--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ h1 {
 
 .app {
   width: 100%;
-  height: 100vh;
+  height: 200vh;
   position: relative;
   background-color: rgba(0,0,0,0.4);
   color: #fff;
@@ -33,7 +33,7 @@ h1 {
 .app:before {
   content: '';
   background: url('./assets/sunset.jpg') no-repeat center center/cover;
-  /* position: absolute; */
+  position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
