--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,29 @@ h1 {
   background-color: rgba(0,0,0,0.4);
   color: #fff;
 }
+.app2 {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-color: rgba(251, 249, 249, 0.986);
+  color: #fff;
+  padding-left: 100px;
+  padding-right: 100px;
+}
 
 .app:before {
   content: '';
   background: url('./assets/sunset.jpg') no-repeat center center/cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.app2:before {
+  content: '';
+  background: url('./assets/graph.jpg') no-repeat center center/cover;
   position: absolute;
   width: 100%;
   height: 100%;
