--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ h1 {
   width: 100%;
   height: 100vh;
   position: relative;
-  background-color: rgba(251, 249, 249, 0.986);
+  background-color: rgba(251, 249, 249, 0.743);
   color: #fff;
   padding-left: 100px;
   padding-right: 100px;
@@ -110,8 +110,18 @@ h1 {
   margin: 1rem auto;
   padding: 1rem;
   border-radius: 12px;
-  background-color: rgba(255,255,255, 0.2);
+  background-color: rgba(255, 255, 255, 0.2);
+  margin-bottom: 200px;
 }
+
+@media (max-width: 768px) {
+  .app .bottom {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 
 .bold {
   font-weight: 700;
